--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  padding: 0;
+  color: whitesmoke;
+  
+  
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  
+}
+.main{
+scroll-behavior: auto;
+height: auto;
+background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),url(../src/Assets/background.jpg);
+background-repeat: no-repeat;
+
+
+overflow: hidden;
+background-size: cover;
+width: 100%;
+min-height: 200vh;
+background-position: center;
 }
